<resources>
    <string name="app_name">WiFi Connect</string>
    <string name="app_copyright">Copyright \u00A9 2016 \u002D 2017</string>
    <string name="about_version_info">v1.0</string>
    <string name="about_organization_name">Est Casablanca - Department of Technology</string>
    <string name="about_description_title">Description</string>
    <string name="about_description_text">Optimize your WiFi network, by checking WiFi network status, signal strength and identifying IP@</string>


</resources>
